2007-08-27  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/gtksourcestylescheme.[ch]: 
	add gtk_source_style_scheme_get_authors	method

	* gtksourceview/language-specs/language2.rng: support multiple
	<author> elements
	* gtksourceview/language-specs/styles.rng: ditto
	* tests/test-widget.c (main): test for the 
	gtk_source_style_scheme_get_authors method

2007-08-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.[ch]: api review: margin ->
	margin-position, show-margin -> show-right-margin.

2007-08-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/html.lang:
	* gtksourceview/language-specs/php.lang:

	Detect html inside php and viceversa. Patch by Eric Norige,
	fixes remaining part of bug #448513.

2007-08-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcebuffer.c: rise the max value for the
	max-undo-levels property and allow -1 to mean 'no limit'.

2007-08-26  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/oblivion.lang: add oblivion style
	scheme so that we have one dark scheme included.

2007-08-26  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/erlang.lang: erlang syntax.

2007-08-26  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcelanguagemanager.[ch]: api review:
	get_language_by_id -> get_language.

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcebuffer.[ch]: api review: check-brackets ->
	highlight-matching-brackets

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcebuffer.[ch]: api review: highlight ->
	highlight_syntax

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.[ch]: api review: tabs-width -> tab-width

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.[ch]: introduce a indent-width property
	that decouples the indentation step from the tab-width setting.