@@ -1,5 +1,9 @@
 2007-08-27  Paolo Maggi  <paolo@gnome.org>
 
+	* gtksourceview/gtksourcebuffer.[ch]: documentation fixes
+
+2007-08-27  Paolo Maggi  <paolo@gnome.org>
+
 	* gtksourceview/gtksourcestylescheme.[ch]: 
 	add gtk_source_style_scheme_get_authors	method
 
